# DonsusV2

./: .gitignore  CMakeLIsts.txt  CMakeLists.txt  README.md
Include/: file.h  parser.h  runner.h  token.h
Include/Donsus/: tomi.h
Include/Internal/: type.cc  type.h
Include/ast/nodes/: AddNode.h  ArrayAccessNode.h  AssignmentNode.h  DivNode.h  IfNode.h  MinusNode.h  MulNode.h  ReturnNode.h  ScopeNode.h  StartNode.h  SubNode.h  node.h
Include/ast/tree/: tree.h
Include/type/: type.h
donsus_test/: CMakeLists.txt
donsus_test/parser/: test_alias.cc  test_array.cc  test_as.cc  test_assignments.cc  test_bitwise.cc  test_case.cc  test_class.cc  test_expr.cc  test_float.cc  test_functions.cc  test_generics.cc  test_if_statement.cc  test_indices.cc  test_instance.cc  test_language_extension.cc  test_loop.cc  test_multi_var_def.cc  test_op_combinations.cc  test_param_decl.cc  test_pointer_ref.cc  test_range_expression.cc  test_tuple.cc  test_typeclass.cc  test_var.cc
donsus_test/parser/error_system/: error_var.cc
src/: handle_file.cc  lexer.cc  main.cc  parser.cc  runner.cc  token.cc  type.cc
src/ast/: node.cc  node.h  tree.cc  tree.h
src/ast/nodes/: node.cc
src/ast/tree/: tree.cc
src/type/: type.cc
src/utility/: exception.h  handle.h  memory_alloc.cc  memory_alloc.h  property.h
src/utility/parser/: helpers.cc  helpers.h  print_ast.cc  print_ast.h
tests/: CMakeLists.txt
